# http-server

./: 400.html  CMakeLists.txt  README.md  database.cpp  main.cpp  server.crt  server.key  ssl_utils.cpp
include/: database.h  logger.h  ssl_utils.h
src/: logger.cpp  main.cpp  request_handler.cpp  request_handler.h
static/: 500.html
